Update BioimageIoSpec